force-app/main/default/objects/Contact/fields/Adjuntoscont__c.field-meta.xml
<CustomField>
    <fullName>Adjuntoscont__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adjuntos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>