force-app/main/default/objects/Contact/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <formula>TEXT( Owner.AM_Concesionario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>