force-app/main/default/objects/Contact/fields/AM_A_que_club_pertenece__c.field-meta.xml
<CustomField>
    <fullName>AM_A_que_club_pertenece__c</fullName>
    <label>¿A que club pertenece?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>