force-app/main/default/objects/Contact/fields/AM_Centro_educativo_Hijo3__c.field-meta.xml
<CustomField>
    <fullName>AM_Centro_educativo_Hijo3__c</fullName>
    <inlineHelpText>No aplica para hijos que no dependan o mayores de 25 años</inlineHelpText>
    <label>Centro educativo...</label>
    <length>80</length>
    <type>Text</type>
</CustomField>