force-app/main/default/objects/Contact/fields/AM_Ciudad_Contacto__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad Contacto</description>
    <label>Ciudad Contacto</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>