force-app/main/default/objects/Contact/fields/AM_Depende_economicamente_de_usted_Hijo2__c.field-meta.xml
<CustomField>
    <fullName>AM_Depende_economicamente_de_usted_Hijo2__c</fullName>
    <label>¿Depende economicamente de usted?..</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>