force-app/main/default/objects/Contact/fields/AM_Deporte_que_prefiere__c.field-meta.xml
<CustomField>
    <fullName>AM_Deporte_que_prefiere__c</fullName>
    <label>Deporte que prefiere</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenis</fullName>
            </value>
            <value>
                <fullName>Ciclismo</fullName>
            </value>
            <value>
                <fullName>Fútbol</fullName>
            </value>
            <value>
                <fullName>Gimnasio</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Motociclismo</fullName>
            </value>
            <value>
                <fullName>Equitacion</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Yoga/Pilates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>