force-app/main/default/objects/Contact/fields/AM_Email_trabajo_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Email_trabajo_Conyuge__c</fullName>
    <label>Email trabajo</label>
    <type>Email</type>
</CustomField>