force-app/main/default/objects/Contact/fields/AM_En_cual_actividad_clasifica_su_labor__c.field-meta.xml
<CustomField>
    <fullName>AM_En_cual_actividad_clasifica_su_labor__c</fullName>
    <inlineHelpText>(Sólo para los que trabajan).</inlineHelpText>
    <label>¿En cual actividad clasifica su labor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativa</fullName>
            </value>
            <value>
                <fullName>Juridica</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Ingenieria</fullName>
            </value>
            <value>
                <fullName>Agricultura/Ganaderia</fullName>
            </value>
            <value>
                <fullName>Mantenimiento/Reparacion</fullName>
            </value>
            <value>
                <fullName>Seguridad</fullName>
            </value>
            <value>
                <fullName>Construccion</fullName>
            </value>
            <value>
                <fullName>Consultoria y Asesoria Empresarial</fullName>
            </value>
            <value>
                <fullName>Mercadeo</fullName>
            </value>
            <value>
                <fullName>Servicios generales (aseo vigilancia mensajeria)</fullName>
            </value>
            <value>
                <fullName>Otros servicios (peluquerias lavanderia etc)</fullName>
            </value>
            <value>
                <fullName>Educacion</fullName>
            </value>
            <value>
                <fullName>Producción/Fabrica</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Financiera</fullName>
            </value>
            <value>
                <fullName>Textil</fullName>
            </value>
            <value>
                <fullName>Comercializadora</fullName>
            </value>
            <value>
                <fullName>Recursos Humanos</fullName>
                <isActive>false</isActive>
                <label>Recursos Humanos</label>
            </value>
            <value>
                <fullName>Ventas</fullName>
                <isActive>false</isActive>
                <label>Ventas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>