force-app/main/default/objects/Contact/fields/AM_Estado_civil__c.field-meta.xml
<CustomField>
    <fullName>AM_Estado_civil__c</fullName>
    <inlineHelpText>Recuerda registrar la informacion del parentesco en sección relación familiar</inlineHelpText>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Unión libre</fullName>
            </value>
            <value>
                <fullName>Soltero</fullName>
            </value>
            <value>
                <fullName>Divorciado/Separado</fullName>
            </value>
            <value>
                <fullName>Viudo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>