force-app/main/default/objects/Contact/fields/AM_Fecha_de_Nacimiento_Hijo2__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_Nacimiento_Hijo2__c</fullName>
    <label>Fecha de Nacimiento..</label>
    <type>Date</type>
</CustomField>