force-app/main/default/objects/Contact/fields/AM_Fecha_de_Nacimiento_Hijo3__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_Nacimiento_Hijo3__c</fullName>
    <label>Fecha de Nacimiento...</label>
    <type>Date</type>
</CustomField>