force-app/main/default/objects/Contact/fields/AM_Intereses_profesionales_comunitarios__c.field-meta.xml
<CustomField>
    <fullName>AM_Intereses_profesionales_comunitarios__c</fullName>
    <label>¿Intereses profesionales/comunitarios?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>