force-app/main/default/objects/Contact/fields/AM_Marca_Linea_Modelo_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Marca_Linea_Modelo_Conyuge__c</fullName>
    <label>Marca/Linea/Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>