force-app/main/default/objects/Contact/fields/AM_Movil_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Movil_Conyuge__c</fullName>
    <label>Movil</label>
    <type>Phone</type>
</CustomField>