force-app/main/default/objects/Contact/fields/AM_No_recibir_SMS__c.field-meta.xml
<CustomField>
    <fullName>AM_No_recibir_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir SMS</label>
    <type>Checkbox</type>
</CustomField>