force-app/main/default/objects/Contact/fields/AM_Numero_de_documento_contacto__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_documento_contacto__c</fullName>
    <label>Numero de documento</label>
    <length>11</length>
    <type>Text</type>
</CustomField>