force-app/main/default/objects/Contact/fields/AM_Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Ocupacion__c</fullName>
    <label>Ocupacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
                <default>true</default>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>Miembro fuerzas armadas</fullName>
                <label>Miembro Fuerzas Armadas</label>
            </value>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Jubilado/Pensionado</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Dueño de empresa</fullName>
            </value>
            <value>
                <fullName>Ama de casa</fullName>
            </value>
            <value>
                <fullName>Rentista de capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>