force-app/main/default/objects/Contact/fields/AM_Ocupacion_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Ocupacion_Conyuge__c</fullName>
    <label>Ocupacion conyuge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Dueño de empresa</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Ama de casa</fullName>
            </value>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Pensionado</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>