force-app/main/default/objects/Contact/fields/AM_Posee_vehiculo_actualmente_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Posee_vehiculo_actualmente_Conyuge__c</fullName>
    <label>¿Posee vehiculo actualmente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>