force-app/main/default/objects/Contact/fields/AM_Primer_Apellido_Hijo_1__c.field-meta.xml
<CustomField>
    <fullName>AM_Primer_Apellido_Hijo_1__c</fullName>
    <label>Primer Apellido.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>