force-app/main/default/objects/Contact/fields/AM_Primer_Nombre_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Primer_Nombre_Conyuge__c</fullName>
    <label>Primer Nombre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>