force-app/main/default/objects/Contact/fields/AM_Primer_Nombre_Hijo_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Primer_Nombre_Hijo_2__c</fullName>
    <label>Primer Nombre..</label>
    <length>80</length>
    <type>Text</type>
</CustomField>