force-app/main/default/objects/Contact/fields/AM_Segundo_Apellido_Hijo_3__c.field-meta.xml
<CustomField>
    <fullName>AM_Segundo_Apellido_Hijo_3__c</fullName>
    <label>Segundo Apellido...</label>
    <length>40</length>
    <type>Text</type>
</CustomField>