force-app/main/default/objects/Contact/fields/AM_Segundo_Nombre_Hijo_1__c.field-meta.xml
<CustomField>
    <fullName>AM_Segundo_Nombre_Hijo_1__c</fullName>
    <label>Segundo Nombre.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>