force-app/main/default/objects/Contact/fields/AM_Tel_Trabajo_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Tel_Trabajo_Conyuge__c</fullName>
    <label>Tel Trabajo</label>
    <type>Phone</type>
</CustomField>