force-app/main/default/objects/Contact/fields/Anexo__c.field-meta.xml
<CustomField>
    <fullName>Anexo__c</fullName>
    <label>Anexo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>