force-app/main/default/objects/Contact/fields/Autorizacion_digital__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion_digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorización digital</label>
    <type>Checkbox</type>
</CustomField>