force-app/main/default/objects/Contact/fields/CreadoEnContacto__c.field-meta.xml
<CustomField>
    <fullName>CreadoEnContacto__c</fullName>
    <label>CreadoEnContacto</label>
    <length>18</length>
    <type>Text</type>
</CustomField>