force-app/main/default/objects/Contact/fields/Desea_recibir_informacion_al_movil__c.field-meta.xml
<CustomField>
    <fullName>Desea_recibir_informacion_al_movil__c</fullName>
    <label>Desea recibir información al móvil?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>