force-app/main/default/objects/Contact/fields/Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>Distribuidor__c</fullName>
    <label>Distribuidor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>