force-app/main/default/objects/Contact/fields/Estado_del_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Contacto__c</fullName>
    <label>Estado del Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
                <isActive>false</isActive>
                <label>Si</label>
            </value>
            <value>
                <fullName>Vigente</fullName>
                <isActive>false</isActive>
                <label>Vigente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>