force-app/main/default/objects/Contact/fields/Fecha_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>