force-app/main/default/objects/Contact/fields/Fecha_ltimo_contacto_cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ltimo_contacto_cliente__c</fullName>
    <label>Fecha último contacto cliente</label>
    <type>Date</type>
</CustomField>