force-app/main/default/objects/Contact/fields/IdsDeAdjuntos__c.field-meta.xml
<CustomField>
    <fullName>IdsDeAdjuntos__c</fullName>
    <label>IdsDeAdjuntos</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>