force-app/main/default/objects/Contact/fields/ltima_fecha_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>ltima_fecha_de_contacto__c</fullName>
    <label>Última fecha de contacto</label>
    <type>Date</type>
</CustomField>