force-app/main/default/objects/Contact/fields/ltimo_comentario_en_contacto__c.field-meta.xml
<CustomField>
    <fullName>ltimo_comentario_en_contacto__c</fullName>
    <label>Último comentario en contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>