force-app/main/default/objects/Contact/fields/Origen_del_contacto__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_contacto__c</fullName>
    <label>Origen del contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Base de Datos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>